traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:22: error: expected start of definition
	override def forward(i:Int)  { 
                 ^TraversalByColumn:25: error: expected start of definition
	override def forward()  {
                 ^TraversalByColumn:28: error: expected start of definition
	override def backward(i:Int) {
                 ^TraversalByColumn:31: error: expected start of definition
	override def backward() {
                 ^TraversalByColumn:34: error: Unmatched closing brace '}' ignored here
}
^