traversal.column.traversalbycolumn.TraversalByColumn.scala.code
def fini(){
  
  if (getMondeHauteur()==6 && getMondeLargeur()==6){
    
      return true
    }
    else{
      return false
    }
  
  }


override def run() {
  var x:Int = 0
  ecritMessage(x)
  
    
  }
}